[package]
name = "amm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
# sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
# num-format = "0.4.4"
rust_decimal = "1.28"
rust_decimal_macros = "1.28"

[[bin]]
name = "main_float"
path = "src/main_float.rs"

[[bin]]
name = "main_fixed"
path = "src/main_fixed.rs"