[package]
name = "amm"
version = "0.1.0"
edition = "2021"
authors = ["alex.rozgo@gmail.com"]

[dependencies]
rand = "0.8.5"
rust_decimal = { version = "1.28", features = ["maths"] }
rust_decimal_macros = "1.28"

[dev-dependencies]
rand = "0.8.5"
tui = "0.19.0"
crossterm = { version = "0.25" }
serde = { version = "1", features = ["derive"] }
